--- a/cteaching.html
+++ b/cteaching.html
@@ -61,7 +61,7 @@ MathJax.Hub.Config({
 <li><p>S1074005 系统科学前沿交叉, 2020-2023秋季学期
 </p>
 </li>
-<li><p>S1075006 系统科学理论与方法, 2020-2023秋季学期
+<li><p>S1075006 <a href="../fss.html" target=&ldquo;blank&rdquo;>系统科学理论与方法</a>, 2020-2023秋季学期
 </p>
 </li>
 </ul>
@@ -76,7 +76,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-30 21:38:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
