--- a/teaching.html
+++ b/teaching.html
@@ -61,7 +61,7 @@ MathJax.Hub.Config({
 <li><p>S1192004 Optimization Theory and Methods, Spring 2023-2024, Fall 2023 (online course)
 </p>
 </li>
-<li><p>S1074005 Frontiers in Systems Science, Fall 2020-2023
+<li><p>S1074005 <a href="../fss.html" target=&ldquo;blank&rdquo;>Frontiers in Systems Science</a>, Fall 2020-2023
 </p>
 </li>
 <li><p>S1075006 Systems Science Theory and Methods, Fall 2020-2023
@@ -79,7 +79,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-30 21:38:10 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
