--- a/pub.html
+++ b/pub.html
@@ -41,6 +41,9 @@ For an up-to-date publication list, please see my <a href="https://scholar.googl
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
+<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang, X. 2024. Macroscopic fundamental diagram with volume-delay relationship: Model derivation, empirical validation and invariance property. <i>Transportation Research Part C: Emerging Technologies</i>, 166, 104739
+</p>
+</li>
 <li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. <i>Sustainable Cities and Society</i>, 99, 104921
 </p>
 </li>
@@ -67,7 +70,13 @@ For an up-to-date publication list, please see my <a href="https://scholar.googl
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
-<li><p>Liu, S., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
+<li><p>Liu, S., <b>Ge, Q.</b>, Han, K. Mechanism design for coordinating vehicle-based mobile sensing tasks within the ride-hailing platform
+</p>
+</li>
+<li><p>Ji, W., Han, K., <b>Ge Q.</b>. Route planning of mobile sensing fleets for repeatable visits
+</p>
+</li>
+<li><p>Yu, L., <b>Ge Q.</b>, Han, K., Ji, W. A paper on route planning for waste collection.
 </p>
 </li>
 <li><p>Zhang, Y., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
@@ -79,20 +88,11 @@ For an up-to-date publication list, please see my <a href="https://scholar.googl
 <li><p>Cao P., Chen Y., Su Z., <b>Ge Q.</b> A paper on mechanism design.
 </p>
 </li>
-<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. A paper on MFD
-</p>
-</li>
-<li><p>Ji, W., Han, K., <b>Ge Q.</b> A paper on TOP
-</p>
-</li>
-<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> A paper on vehicle-cargo matching
-</p>
-</li>
 </ol>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-07-22 12:05:04 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
