--- a/tuna.html
+++ b/tuna.html
@@ -33,10 +33,16 @@ MathJax.Hub.Config({
 </div>
 <h2>西南交通大学</h2>
 <ul>
-<li><p>硕士生
+<li><p>硕士生（name，placement）
 </p>
 <ul>
-<li><p>许俊，2024级
+<li><p>林振宇，2024级（即将入学）
+</p>
+</li>
+<li><p>许俊，2024级（即将入学）
+</p>
+</li>
+<li><p>朱燕妮，2024级（即将入学）
 </p>
 </li>
 <li><p>喻磊，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
@@ -68,28 +74,28 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>本科生
+<li><p>本科毕业论文（name，placement）
 </p>
 <ul>
-<li><p>许俊，2024.2-2024.6
+<li><p>许俊，2024.2-2024.6，西南交通大学交通运输与物流学院
 </p>
 </li>
-<li><p>叶雯宇，2024.2-2024.6
+<li><p>叶雯宇，2024.2-2024.6，东南大学交通学院
 </p>
 </li>
-<li><p>王章任，2024.2-2024.6
+<li><p>王章任，2024.2-2024.6，武汉大学经济与管理学院
 </p>
 </li>
-<li><p>张奕童，2022.2-2022.6，西南交通大学
+<li><p>张奕童，2022.2-2022.6，西南交通大学交通运输与物流学院
 </p>
 </li>
-<li><p>刘佳乐，2022.2-2022.6，西南交通大学
+<li><p>刘佳乐，2022.2-2022.6，西南交通大学交通运输与物流学院
 </p>
 </li>
 <li><p>饶雪辰，2022.2-2022.6，公务员
 </p>
 </li>
-<li><p>高川越，2022.2-2022.6，卡内基梅隆大学
+<li><p>高川越，2022.2-2022.6，卡内基梅隆大学土木与环境工程系
 </p>
 </li>
 <li><p>高可宇，2020.2-2020.6，铁路局
@@ -120,7 +126,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 13:13:01 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-07-22 12:15:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
