--- a/tuna.html
+++ b/tuna.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 </div>
 <h2>西南交通大学</h2>
 <ul>
-<li><p>硕士生（name，placement）
+<li><p>硕士生（姓名，入/出组时间，升学/就职去向）
 </p>
 <ul>
 <li><p>林振宇，2024级（即将入学）
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>本科毕业论文（name，placement）
+<li><p>本科毕业论文（姓名，入/出组时间，升学/就职去向）
 </p>
 <ul>
 <li><p>许俊，2024.2-2024.6，西南交通大学交通运输与物流学院
