--- a/tuna.html
+++ b/tuna.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 </div>
 <h2>西南交通大学</h2>
 <ul>
-<li><p>硕士生（姓名，入/出组时间，升学/就职去向）
+<li><p>硕士生（姓名，年份，升学/就业去向）
 </p>
 <ul>
 <li><p>林振宇，2024级（即将入学）
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>本科毕业论文（姓名，入/出组时间，升学/就职去向）
+<li><p>本科毕业论文（姓名，年份，升学/就业去向）
 </p>
 <ul>
 <li><p>许俊，2024.2-2024.6，西南交通大学交通运输与物流学院
@@ -106,19 +106,34 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>科创实验
+<li><p>本科研究课题（姓名，年份，升学/就业去向）
 </p>
 <ul>
-<li><p>2021-2022：颜伟洋、洪宇新、毛祈萱、李墨岩
+<li><p>张艺严，2024
 </p>
 </li>
-<li><p>2021-2022：曾杰、刘嘉琪、刘祝银、何远亮、张原诚
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>科创训练（SRTP）
+</p>
+<ul>
+<li><p>2023-2024：李晨、王昱舒、刘翔、阎思源
 </p>
 </li>
 <li><p>2022-2023：朱硕、许珈瑞、张中源、屈佳宜、陈迦嫱
 </p>
 </li>
-<li><p>2022-2023：张俊松、王恒之、唐晋元、王茗昕</p>
+<li><p>2022-2023：张俊松、王恒之、唐晋元、王茗昕
+</p>
+</li>
+<li><p>2021-2022：颜伟洋、洪宇新、毛祈萱、李墨岩
+</p>
+</li>
+<li><p>2021-2022：曾杰、刘嘉琪、刘祝银、何远亮、张原诚
+</p>
 </li>
 </ul>
 
@@ -126,7 +141,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-22 12:15:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-07-22 12:20:18 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
