lab members update

--- a/cindex.html
+++ b/cindex.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">ResearchGate</a></div>
 <div class="menu-item"><a href="cteaching.html">教学情况</a></div>
 <div class="menu-item"><a href="pub.html">代表论文</a></div>
+<div class="menu-item"><a href="misc.html">其他</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -63,6 +64,18 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
+<h2>工作经历</h2>
+<ul>
+<li><p>东京工业大学，土木与环境工程系，产学官研究员（博士后）, 2017.3-2019.10 <br />
+</p>
+</li>
+<li><p>西南交通大学，交通运输与物流学院，副教授，2019.10-2024.2 <br />
+</p>
+</li>
+<li><p>西南交通大学，经济管理学院，副教授，2025.2- <br />
+</p>
+</li>
+</ul>
 <h2>教育经历</h2>
 <ul>
 <li><p>东南大学，土木工程学院，工程管理学士, 2010 <br />
@@ -72,18 +85,6 @@ MathJax.Hub.Config({
 </p>
 </li>
 <li><p>东京工业大学，土木与环境工程系，土木工程博士（交通工程方向），2017 <br />
-</p>
-</li>
-</ul>
-<h2>工作经历</h2>
-<ul>
-<li><p>东京工业大学，土木与环境工程系，产学官研究员（博士后）, 2017.3-2019.10 <br />
-</p>
-</li>
-<li><p>西南交通大学，交通运输与物流学院，副教授，2019.10-2024.8 <br />
-</p>
-</li>
-<li><p>西南交通大学，经济管理学院，副教授，2024.9至今 <br />
 </p>
 </li>
 </ul>
@@ -100,7 +101,7 @@ MathJax.Hub.Config({
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
