--- a/cpub.html
+++ b/cpub.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">ResearchGate</a></div>
 <div class="menu-item"><a href="cteaching.html">教学情况</a></div>
 <div class="menu-item"><a href="pub.html">代表论文</a></div>
+<div class="menu-item"><a href="misc.html">其他</a></div>
 </td>
 <td id="layout-content">
 <p>
@@ -91,7 +92,7 @@ MathJax.Hub.Config({
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
