--- a/cteaching.html
+++ b/cteaching.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">ResearchGate</a></div>
 <div class="menu-item"><a href="cteaching.html" class="current">教学情况</a></div>
 <div class="menu-item"><a href="pub.html">代表论文</a></div>
+<div class="menu-item"><a href="misc.html">其他</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -36,16 +37,16 @@ MathJax.Hub.Config({
 <li><p>本科
 </p>
 <ul>
-<li><p>TRAL008112 数据结构与算法, 2022-2023秋季学期; 2023-2024春季学期
+<li><p>TRAL008112 数据结构与算法, 2022-2024秋季学期; 2023-2024春季学期
 </p>
 </li>
 <li><p>TRAL007412 <a href="../tef_uestc.html" target=&ldquo;blank&rdquo;>交通工程学</a>, 2022-2024春季学期
 </p>
 </li>
-<li><p>TRAL007212 数据库技术与应用, 2019-2021秋季学期; 2021春季学期
+<li><p>TRAL007212 数据库技术与应用, 2021春季学期, 2019-2021秋季学期
 </p>
 </li>
-<li><p>TRAL015012 <a href="../lsa.html" target=&ldquo;blank&rdquo;>物流系统分析</a>, 2021, 2023秋季学期
+<li><p>TRAL015012 <a href="../lsa.html" target=&ldquo;blank&rdquo;>物流系统分析</a>, 2021, 2023-2024秋季学期
 </p>
 </li>
 </ul>
@@ -59,10 +60,10 @@ MathJax.Hub.Config({
 <li><p>S1192004 最优化理论与方法, 2023-2024春季学期, 2023秋季学期(网络课程)
 </p>
 </li>
-<li><p>S1074005 系统科学前沿交叉, 2020-2023秋季学期
+<li><p>S1074005 系统科学前沿交叉, 2020-2024秋季学期
 </p>
 </li>
-<li><p>S1075006 <a href="../fss.html" target=&ldquo;blank&rdquo;>系统科学理论与方法</a>, 2020-2023秋季学期
+<li><p>S1075006 <a href="../fss.html" target=&ldquo;blank&rdquo;>系统科学理论与方法</a>, 2020-2024秋季学期
 </p>
 </li>
 </ul>
@@ -77,7 +78,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
