--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ E-mail: geqian@outlook.com <br />
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am currently an Associate Professor in <a href="https://glxy.swjtu.edu.cn/English.htm" target=&ldquo;blank&rdquo;>School of Economics and Management</a> at the <a href="https://en.swjtu.edu.cn/" target=&ldquo;blank&rdquo;>Southwest Jiaotong University</a> (SWJTU), China. Before taking this position, I worked in School of Transport and Logistics of SWJTU for a couple of years, and had postdoctoral and doctoral trainings at <a href="https://www.isct.ac.jp/en" target=&ldquo;blank&rdquo;>Institute of Science Tokyo</a> (Science Tokyo) (formerly known as Tokyo Institute of Technology) prior to that. My postdoctoral and doctoral advisor was <a href="https://liis.t.u-tokyo.ac.jp/" target=&ldquo;blank&rdquo;>Prof. Daisuke Fukuda</a>. <br />
+<p>I am currently an Associate Professor in <a href="https://glxy.swjtu.edu.cn/English.htm" target=&ldquo;blank&rdquo;>School of Economics and Management</a> at the <a href="https://en.swjtu.edu.cn/" target=&ldquo;blank&rdquo;>Southwest Jiaotong University</a> (SWJTU), China. Before taking this position, I worked in School of Transport and Logistics of SWJTU for a couple of years, and had postdoctoral and doctoral trainings at <a href="https://www.isct.ac.jp/en" target=&ldquo;blank&rdquo;>Institute of Science Tokyo</a> (formerly known as Tokyo Institute of Technology) prior to that. My postdoctoral and doctoral advisor was <a href="https://liis.t.u-tokyo.ac.jp/" target=&ldquo;blank&rdquo;>Prof. Daisuke Fukuda</a>. <br />
 </p>
 <h2>Research interests</h2>
 <p>I lead the Transportation Systems and Urban Networks Analysis (TUNA) Lab in SWJTU. The TUNA Lab focuses on a variety of <b>optimization problems</b> and <b>equilibrium models</b> in transportation and logistics networks. In particular, we leverage operations research, game theory, and machine learning tools to design mechanisms and algorithms for equitable and efficient transportation systems.  <br />
@@ -124,7 +124,7 @@ Some specific directions that we currently focus on include
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
