--- a/misc.html
+++ b/misc.html
@@ -29,7 +29,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="misc.html" class="current">Misc.</a></div>
 </td>
 <td id="layout-content">
-<h2>研究资源</h2>
+<h2>研究资源（开源资源）</h2>
 <ul>
 <li><p>阅读与写作
 </p>
@@ -60,7 +60,7 @@ MathJax.Hub.Config({
 <li><p>Python：PyCharm
 </p>
 </li>
-<li><p>C<tt></tt>：CodeLite (Unix<i>Linux</i>macOS) 或 Visual Studio (Windows) 
+<li><p>C<tt></tt>：CodeLite (Unix/Linux/macOS) 或 Visual Studio (Windows) 
 </p>
 </li>
 </ul>
@@ -71,7 +71,7 @@ MathJax.Hub.Config({
 <li><p>专业软件
 </p>
 <ul>
-<li><p>优化求解器：COIN-OR
+<li><p>优化求解器：SCIP/COIN-OR
 </p>
 </li>
 <li><p>微观交通仿真：SUMO
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
