--- a/tuna.html
+++ b/tuna.html
@@ -34,19 +34,28 @@ MathJax.Hub.Config({
 </div>
 <h2>西南交通大学</h2>
 <ul>
-<li><p>硕士生（姓名，入<i>出组时间，升学</i>就职去向）
+<li><p>硕士生（姓名，入/出组时间，升学/就职去向）
 </p>
 <ul>
-<li><p>林振宇，2024级（即将入学）
+<li><p>陈梦瑶，2025级（即将入学）
 </p>
 </li>
-<li><p>许俊，2024级（即将入学）
+<li><p>陈伟杰，2025级（即将入学）
 </p>
 </li>
-<li><p>朱燕妮，2024级（即将入学）
+<li><p>翟乐欣，2025级（即将入学）
 </p>
 </li>
-<li><p>喻磊，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
+<li><p>张亦霖，2025级（即将入学）
+</p>
+</li>
+<li><p>林振宇，2024级
+</p>
+</li>
+<li><p>许俊，2024级
+</p>
+</li>
+<li><p>朱燕妮，2024级
 </p>
 </li>
 <li><p>王砚棋，2023级
@@ -55,16 +64,19 @@ MathJax.Hub.Config({
 <li><p>王全鑫，2023级
 </p>
 </li>
-<li><p>张文利，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
+<li><p>喻磊，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
 </p>
 </li>
-<li><p>刘盛林，2022级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
+<li><p>张文利，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
 </p>
 </li>
 <li><p>陈一帆，2022级
 </p>
 </li>
 <li><p>刘佳乐，2022级
+</p>
+</li>
+<li><p>刘盛林，2022级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
 </p>
 </li>
 <li><p>张奕童，2022级
@@ -75,31 +87,46 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>本科毕业论文（姓名，入<i>出组时间，升学</i>就职去向）
+<li><p>本科毕业论文（姓名，入/出组时间，升学/就职去向）
 </p>
 <ul>
-<li><p>许俊，2024.2-2024.6，西南交通大学交通运输与物流学院
+<li><p>陈梦瑶，2024.12-2025.6
 </p>
 </li>
-<li><p>叶雯宇，2024.2-2024.6，东南大学交通学院
+<li><p>陈伟杰，2024.12-2025.6
 </p>
 </li>
-<li><p>王章任，2024.2-2024.6，武汉大学经济与管理学院
+<li><p>林栩茹，2024.12-2025.6
 </p>
 </li>
-<li><p>张奕童，2022.2-2022.6，西南交通大学交通运输与物流学院
+<li><p>翟乐欣，2024.12-2025.6
 </p>
 </li>
-<li><p>刘佳乐，2022.2-2022.6，西南交通大学交通运输与物流学院
+<li><p>张亦霖，2024.12-2025.6
 </p>
 </li>
-<li><p>饶雪辰，2022.2-2022.6，公务员
+<li><p>许俊，2023.12-2024.6，西南交通大学交通运输与物流学院
 </p>
 </li>
-<li><p>高川越，2022.2-2022.6，卡内基梅隆大学土木与环境工程系
+<li><p>叶雯宇，2023.12-2024.6，东南大学交通学院
 </p>
 </li>
-<li><p>高可宇，2020.2-2020.6，铁路局
+<li><p>王章任，2023.12-2024.6，武汉大学经济与管理学院
+</p>
+</li>
+<li><p>张奕童，2021.12-2022.6，西南交通大学交通运输与物流学院
+</p>
+</li>
+<li><p>刘佳乐，2021.12-2022.6，西南交通大学交通运输与物流学院
+</p>
+</li>
+<li><p>饶雪辰，2021.12-2022.6，公务员
+</p>
+</li>
+<li><p>高川越，2021.12-2022.6，卡内基梅隆大学土木与环境工程系
+</p>
+</li>
+<li><p>高可宇，2019.12-2020.6，铁路局
 </p>
 </li>
 </ul>
@@ -107,9 +134,12 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>本科研究课题（姓名，入<i>出组时间，升学</i>就职去向）
+<li><p>本科研究课题（姓名，入/出组时间，升学/就职去向）
 </p>
 <ul>
+<li><p>俞霁航，2024
+</p>
+</li>
 <li><p>张艺严，2024
 </p>
 </li>
@@ -142,7 +172,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-18 20:33:08 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-19 17:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
